# SuPer_sound_detection_AL

./: .gitignore  README.md  agile_modeling_training.ipynb  config_dict.json  config_dict_example.json  create_embeddings.ipynb  create_test_set_data.ipynb  experiments_script.ipynb  figures_results_experiment.ipynb  pyproject.toml  surfperch_eval_on_testset.ipynb  utils_agile_model.py
models/Perch-model/: info_model  saved_model.pb
models/Perch-model/variables/: variables.index
models/SurfPerch-model/: info_model
models/SurfPerch-model/assets/: fsd50k_label.csv  reef_label.csv
